forgot password Page Done

--- a/MidTerm_Movies/Presentation/Scenes/ForgotPassword/ForgotPasswordViewController.storyboard
+++ b/MidTerm_Movies/Presentation/Scenes/ForgotPassword/ForgotPasswordViewController.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,18 +14,114 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="HY5-us-K2E">
+                                <rect key="frame" x="131" y="139" width="152" height="152"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="152" id="PzA-9i-89g"/>
+                                    <constraint firstAttribute="height" constant="152" id="Rbm-mA-6Wd"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FORGOT PASSWORD?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LHZ-gG-YFs">
+                                <rect key="frame" x="136" y="333" width="142" height="16"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                <color key="textColor" red="0.35294117650000001" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aln-sY-4jI">
+                                <rect key="frame" x="63" y="363" width="288" height="54"/>
+                                <string key="text">Enter the email address you used to
+create your account and we will email
+you a link to reset your password</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.49411764705882355" green="0.49411764705882355" blue="0.49411764705882355" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EMAIL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pkc-IT-NMI">
+                                <rect key="frame" x="45" y="454" width="39" height="15"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="   email here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mN1-yd-Bxd" customClass="ShadowForUITextField" customModule="MidTerm_Movies" customModuleProvider="target">
+                                <rect key="frame" x="45" y="477" width="324" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="una-Kc-OGX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowCornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" red="0.35294117650000001" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9l6-Wv-hwK" customClass="GradientViewUIButton" customModule="MidTerm_Movies" customModuleProvider="target">
+                                <rect key="frame" x="45" y="544" width="324" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="bTf-eD-QGz"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="SEND EMAIL"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="startColor">
+                                        <color key="value" red="1" green="0.73333333329999995" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="endColor">
+                                        <color key="value" red="1" green="0.66274509800000003" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="rounded" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="9"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="1" green="0.99997437" blue="1" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="aln-sY-4jI" secondAttribute="trailing" constant="63" id="1Pf-wc-g5c"/>
+                            <constraint firstItem="aln-sY-4jI" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="63" id="5Kf-ci-ufP"/>
+                            <constraint firstItem="mN1-yd-Bxd" firstAttribute="top" secondItem="Pkc-IT-NMI" secondAttribute="bottom" constant="8" id="8nq-iE-6Em"/>
+                            <constraint firstItem="LHZ-gG-YFs" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="AMP-ix-k5k"/>
+                            <constraint firstItem="HY5-us-K2E" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="C3x-Bg-QbH"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="mN1-yd-Bxd" secondAttribute="trailing" constant="45" id="E4V-CI-C3E"/>
+                            <constraint firstItem="aln-sY-4jI" firstAttribute="top" secondItem="LHZ-gG-YFs" secondAttribute="bottom" constant="14" id="EZo-HQ-oSL"/>
+                            <constraint firstItem="9l6-Wv-hwK" firstAttribute="top" secondItem="mN1-yd-Bxd" secondAttribute="bottom" constant="25" id="KL7-Gc-YQF"/>
+                            <constraint firstItem="Pkc-IT-NMI" firstAttribute="leading" secondItem="mN1-yd-Bxd" secondAttribute="leading" id="LUa-Rr-yE0"/>
+                            <constraint firstItem="9l6-Wv-hwK" firstAttribute="trailing" secondItem="mN1-yd-Bxd" secondAttribute="trailing" id="Qn9-5r-poW"/>
+                            <constraint firstItem="HY5-us-K2E" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="95" id="Ye5-fj-X0w"/>
+                            <constraint firstItem="Pkc-IT-NMI" firstAttribute="top" secondItem="aln-sY-4jI" secondAttribute="bottom" constant="37" id="Zkz-WG-7vH"/>
+                            <constraint firstItem="LHZ-gG-YFs" firstAttribute="top" secondItem="HY5-us-K2E" secondAttribute="bottom" constant="42" id="gRW-B3-nlH"/>
+                            <constraint firstItem="mN1-yd-Bxd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="45" id="hXr-Rk-i0j"/>
+                            <constraint firstItem="9l6-Wv-hwK" firstAttribute="leading" secondItem="mN1-yd-Bxd" secondAttribute="leading" id="r8l-mY-Tgg"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="87" y="92"/>
+            <point key="canvasLocation" x="86.956521739130437" y="91.741071428571431"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="9l6-Wv-hwK">
+            <size key="intrinsicContentSize" width="106" height="31"/>
+        </designable>
+        <designable name="mN1-yd-Bxd">
+            <size key="intrinsicContentSize" width="106.5" height="34"/>
+        </designable>
+    </designables>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="Image" width="30" height="30"/>
     </resources>
 </document>
