--- a/MidTerm_Movies/Presentation/Scenes/Login/LoginViewController.storyboard
+++ b/MidTerm_Movies/Presentation/Scenes/Login/LoginViewController.storyboard
@@ -11,7 +11,7 @@
         <!--Login View Controller-->
         <scene sceneID="bE8-FC-y93">
             <objects>
-                <viewController storyboardIdentifier="LoginViewController" id="IDk-cy-Dd7" customClass="LoginViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="IDk-cy-Dd7" customClass="LoginViewController" customModule="MidTerm_Movies" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="M4g-Fx-SBX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -100,6 +100,9 @@
                                                 <real key="value" value="1"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="onLoginButtonClick:" destination="IDk-cy-Dd7" eventType="touchUpInside" id="Zxt-MN-j73"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CD2-sN-RCn">
                                         <rect key="frame" x="45" y="591" width="285" height="1"/>
@@ -215,6 +218,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="68X-rv-TaT"/>
+                    <connections>
+                        <outlet property="emailFild" destination="XB9-QK-jxB" id="35Q-mq-Pq2"/>
+                        <outlet property="passwordFild" destination="IKx-r7-1CO" id="qKs-j7-lzb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RQN-yQ-JMO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
