--- a/MidTerm_Movies/Presentation/Scenes/Main Tab Bar/Profile bar/ProfileTabViewController.storyboard
+++ b/MidTerm_Movies/Presentation/Scenes/Main Tab Bar/Profile bar/ProfileTabViewController.storyboard
@@ -139,6 +139,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="logout"/>
+                                <connections>
+                                    <action selector="onLogOutButtonClick:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="KQA-BZ-XOQ"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TgT-Gb-Or9">
                                 <rect key="frame" x="31" y="655.33333333333337" width="344" height="1"/>
@@ -154,6 +157,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Logout">
                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="onLogOutButtonClick:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="nBf-Uq-xej"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
